sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/Array.sand
pub class Array {
    foo() {
        new Foo[] {
            
        }
    }
}